# server/generated/openapi_server/models/pair_post200_response.py
@@ -1,0 +1,63 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server import util
+
+
+class PairPost200Response(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, pairing_token=None):  # noqa: E501
+        """PairPost200Response - a model defined in OpenAPI
+
+        :param pairing_token: The pairing_token of this PairPost200Response.  # noqa: E501
+        :type pairing_token: str
+        """
+        self.openapi_types = {
+            'pairing_token': str
+        }
+
+        self.attribute_map = {
+            'pairing_token': 'pairing_token'
+        }
+
+        self._pairing_token = pairing_token
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'PairPost200Response':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The _pair_post_200_response of this PairPost200Response.  # noqa: E501
+        :rtype: PairPost200Response
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def pairing_token(self) -> str:
+        """Gets the pairing_token of this PairPost200Response.
+
+        The token to be used for authenticated requests  # noqa: E501
+
+        :return: The pairing_token of this PairPost200Response.
+        :rtype: str
+        """
+        return self._pairing_token
+
+    @pairing_token.setter
+    def pairing_token(self, pairing_token: str):
+        """Sets the pairing_token of this PairPost200Response.
+
+        The token to be used for authenticated requests  # noqa: E501
+
+        :param pairing_token: The pairing_token of this PairPost200Response.
+        :type pairing_token: str
+        """
+
+        self._pairing_token = pairing_token
