# server/generated/openapi_server/models/robot_register_post409_response.py
@@ -1,0 +1,61 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server import util
+
+
+class RobotRegisterPost409Response(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, error=None):  # noqa: E501
+        """RobotRegisterPost409Response - a model defined in OpenAPI
+
+        :param error: The error of this RobotRegisterPost409Response.  # noqa: E501
+        :type error: str
+        """
+        self.openapi_types = {
+            'error': str
+        }
+
+        self.attribute_map = {
+            'error': 'error'
+        }
+
+        self._error = error
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'RobotRegisterPost409Response':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The _robot_register_post_409_response of this RobotRegisterPost409Response.  # noqa: E501
+        :rtype: RobotRegisterPost409Response
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def error(self) -> str:
+        """Gets the error of this RobotRegisterPost409Response.
+
+
+        :return: The error of this RobotRegisterPost409Response.
+        :rtype: str
+        """
+        return self._error
+
+    @error.setter
+    def error(self, error: str):
+        """Sets the error of this RobotRegisterPost409Response.
+
+
+        :param error: The error of this RobotRegisterPost409Response.
+        :type error: str
+        """
+
+        self._error = error
