# server/generated/openapi_server/openapi/openapi.yaml
@@ -13,7 +13,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/_command_get_request"
+              $ref: "#/components/schemas/_pair_post_request"
         required: true
       responses:
         "200":
@@ -95,10 +95,46 @@ paths:
         required: true
       responses:
         "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/_pair_post_200_response"
           description: Paired successfully
-      security:
-      - PairingToken: []
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/_pair_post_400_response"
+          description: Invalid robot ID
+        "409":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/_pair_post_409_response"
+          description: Robot already paired
+      security: []
       summary: Pair with the server using a pairing token
+      x-openapi-router-controller: openapi_server.controllers.default_controller
+  /robot/register:
+    post:
+      operationId: robot_register_post
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/_pair_post_request"
+        required: true
+      responses:
+        "200":
+          description: Registered successfully
+        "409":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/_robot_register_post_409_response"
+          description: Robot already registered
+      security: []
+      summary: Register a new robot with the server
       x-openapi-router-controller: openapi_server.controllers.default_controller
   /status:
     get:
@@ -159,11 +195,48 @@ components:
           description: The unique identifier for the robot
           title: robot_id
           type: string
+      title: _pair_post_request
+      type: object
+    _pair_post_200_response:
+      example:
+        pairing_token: xj2bjzx8b1njk2n
+      properties:
         pairing_token:
-          description: The pairing token to authenticate with the server
+          description: The token to be used for authenticated requests
+          example: xj2bjzx8b1njk2n
           title: pairing_token
           type: string
-      title: _pair_post_request
+      title: _pair_post_200_response
+      type: object
+    _pair_post_400_response:
+      example:
+        error: Invalid robot ID
+      properties:
+        error:
+          example: Invalid robot ID
+          title: error
+          type: string
+      title: _pair_post_400_response
+      type: object
+    _pair_post_409_response:
+      example:
+        error: Robot already paired
+      properties:
+        error:
+          example: Robot already paired
+          title: error
+          type: string
+      title: _pair_post_409_response
+      type: object
+    _robot_register_post_409_response:
+      example:
+        error: Robot already registered
+      properties:
+        error:
+          example: Robot already registered
+          title: error
+          type: string
+      title: _robot_register_post_409_response
       type: object
     _status_get_200_response:
       example:
@@ -174,14 +247,6 @@ components:
           title: status
           type: string
       title: _status_get_200_response
-      type: object
-    _command_get_request:
-      properties:
-        robot_id:
-          description: The unique identifier for the robot
-          title: robot_id
-          type: string
-      title: _command_get_request
       type: object
     _command_get_200_response:
       example:
